test/typecheck/fail/undeclared_vector_assignment.sail
default Order dec
$include <prelude.sail>

val main : unit -> unit

function main() = {
    x[0] = 0b0
}
